--- a/Layout/homepage.html
+++ b/Layout/homepage.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{{ url_for('static', filename='homepage.css') }}">
+  <link rel="stylesheet" href="homepage.css">
   <title>Data Analysis</title>
 </head>
 
@@ -56,7 +56,7 @@
 
   </div>
 
-  <script src="{{ url_for('static', filename='dashboard.js') }}"></script>
+  <script src="dashboard.js"></script>
 </body>
 
 </html>
