--- a/Layout/upload.html
+++ b/Layout/upload.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{{ url_for('static', filename='upload.css') }}">
+  <link rel="stylesheet" href="upload.css">
   <title>Upload Bank Statement</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
 </head>
 
 <body>
@@ -62,7 +63,8 @@
     </div>
   </div>
 
-  <script src="{{ url_for('static', filename='upload.js') }}"></script>
+  <script src="analysis.js"></script>
+  <script src="upload.js"></script>
 </body>
 
 </html>
