--- a/Layout/upload.html
+++ b/Layout/upload.html
@@ -29,7 +29,7 @@
             <line x1="12" y1="3" x2="12" y2="15"></line>
           </svg>
         </div>
-        <h3>Drag & Drop your CSV file here</h3>
+        <h3>Drag & Drop your CAPITEC CSV file here</h3>
         <p>or</p>
         <label for="fileInput" class="file-button">Choose File</label>
         <input type="file" id="fileInput" accept=".csv" hidden>
